...
  <string name="due_date_unknown">Due Date Unknown</string>
  <string name="new_invoice_button">New</string>

  <!-- Detail Fragment -->
  <string name="go_back">Go Back</string>
  <string name="content_des_go_back">Go Back Arrow</string>
  <string name="edit_button">Edit</string>
  <string name="delete_button">Delete</string>
  <string name="mark_as_paid_button">Mark as Paid</string>
  <string name="status">Status</string>
  <string name="invoice_date_title">Invoice Date</string>
  <string name="bill_to_title">Bill To</string>
  <string name="send_to_title">Send to</string>
  <string name="payment_due_title">Payment Due</string>
  <string name="amount_due_title">Amount Due</string>
...
  <string name="country_title">Country</string>
  <string name="clients_name_title">Client\'s Name</string>
  <string name="clients_email_title">Client\'s Email</string>
  <string name="payment_terms_title">Payment Terms</string>
  <string name="project_description_title">Project / Description</string>
  <string name="item_list">Item List</string>
  <string name="add_item_button">+ Add New Item</string>
  <string name="item_name_title">Item Name</string>
  <string name="quantity_title">Qty.</string>
  <string name="total_title">Total</string>
  <string name="price_title">Price</string>
  <string name="discard_button">Discard</string>
  <string name="draft_button">Save as Draft</string>
  <string name="save_send_button"><![CDATA[Save & Send]]></string>
  <string name="save_changes_button">Save Changes</string>
  <string name="cancel_button">Cancel</string>
  <string name="edit_title">Edit #%s</string>
  <string name="create_new_invoice">New Invoice</string>
</resources>
