<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <import type="android.view.View" />

    <variable
      name="viewModel"
      type="com.akshay.roomaccounting.ui.home.write.WriteInvoiceViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
      android:id="@+id/go_back_arrow_image_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="32dp"
      android:contentDescription="@string/content_des_go_back"
      android:src="@drawable/icon_arrow_left"
      app:layout_constraintBottom_toBottomOf="@+id/go_back_text_view"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/go_back_text_view"
      style="@style/Heading2"
      android:layout_marginStart="16dp"
      android:layout_marginTop="32dp"
      android:text="@string/go_back"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toEndOf="@+id/go_back_arrow_image_view"
      app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/invoice_form_recyclerview"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="16dp"
      android:clipToPadding="false"
      android:overScrollMode="never"
      android:paddingBottom="50dp"
      app:data="@{viewModel.writeInvoiceList}"
      app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
      app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/go_back_text_view" />

    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/bottom_guideline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_percent="0.85" />

    <View
      android:id="@+id/background_view"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:background="@color/card_background2"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/bottom_guideline" />

    <Button
      android:id="@+id/discard_button"
      style="@style/Button1"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:background="@drawable/edit_background"
      android:onClick="@{() -> viewModel.discard()}"
      android:text="@string/discard_button"
      android:textAllCaps="false"
      android:visibility="@{viewModel.isEdit ? View.GONE: View.VISIBLE}"
      app:backgroundTint="@null"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/draft_button"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/bottom_guideline" />

    <Button
      android:id="@+id/draft_button"
      style="@style/Button1"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:background="@drawable/draft_background"
      android:onClick="@{() -> viewModel.saveAsDraft()}"
      android:text="@string/draft_button"
      android:textAllCaps="false"
      android:visibility="@{viewModel.isEdit ? View.GONE: View.VISIBLE}"
      app:backgroundTint="@null"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/save_button"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/discard_button"
      app:layout_constraintTop_toTopOf="@+id/bottom_guideline" />

    <Button
      android:id="@+id/save_button"
      style="@style/Button1"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginEnd="16dp"
      android:background="@drawable/mark_as_paid_background"
      android:onClick="@{() -> viewModel.onSaveClick()}"
      android:text="@string/save_send_button"
      android:textAllCaps="false"
      android:visibility="@{viewModel.isEdit ? View.GONE: View.VISIBLE}"
      app:backgroundTint="@null"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/draft_button"
      app:layout_constraintTop_toTopOf="@+id/bottom_guideline" />

    <Button
      android:id="@+id/cancel_button"
      style="@style/Button1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="8dp"
      android:background="@drawable/edit_background"
      android:onClick="@{() -> viewModel.discard()}"
      android:text="@string/cancel_button"
      android:textAllCaps="false"
      android:visibility="@{!viewModel.isEdit ? View.GONE: View.VISIBLE}"
      app:backgroundTint="@null"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/save_changes_button"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/bottom_guideline" />

    <Button
      android:id="@+id/save_changes_button"
      style="@style/Button1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:background="@drawable/mark_as_paid_background"
      android:onClick="@{() -> viewModel.saveChanges()}"
      android:text="@string/save_changes_button"
      android:textAllCaps="false"
      android:visibility="@{!viewModel.isEdit ? View.GONE: View.VISIBLE}"
      app:backgroundTint="@null"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintTop_toTopOf="@+id/bottom_guideline" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
