...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

      <EditText
        android:id="@+id/city_text_input"
        style="@style/InputInteractionEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@{viewModel.city}"
...
        app:layout_constraintEnd_toStartOf="@+id/middle_guideline"
        app:layout_constraintStart_toStartOf="@+id/city_title_text_view"
        app:layout_constraintTop_toBottomOf="@+id/city_title_text_view"
        app:textChangedListener="@{viewModel.cityAddressTextWatcher}" />

      <EditText
        android:id="@+id/post_code_text_input"
        style="@style/InputInteractionEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@{viewModel.postCode}"
        app:layout_constraintBottom_toBottomOf="parent"
...
